# chess-review-bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pr-review.yml  release.yml
action/: action.yml  comment.py  entrypoint.py
docs/adr/: 0001-deterministic-classification.md
src/chessreview/: __init__.py  __main__.py  classifier.py  cli.py  commentary.py  config.py  diff_parser.py  gitutil.py  redaction.py  reporter.py  signals.py
tests/: test_classifier.py  test_cli.py  test_commentary.py  test_diff_parser.py  test_gitutil.py  test_redaction.py  test_reporter.py  test_signals.py
