[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chess-review-bot"
version = "0.1.3"
description = "Classify git diffs using chess.com-style move categories (Brilliant, Blunder, and everything between)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "cli", "git", "code-review", "github-action", "devtools", "chess"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
commentary = ["google-genai>=1.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
chessreview = "chessreview.cli:main"

[project.urls]
Homepage = "https://github.com/SemTiOne/chess-review-bot"
Issues = "https://github.com/SemTiOne/chess-review-bot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chessreview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]

[tool.coverage.run]
source = ["chessreview"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
